syntax = "proto3";

import "google/protobuf/empty.proto";

package blog;

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message AuthResponse {
  string token = 1;
}

message LoginRequest {
  string username = 1; 
  string password = 2;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
}

message Post {
  int64 id = 1;
  string title = 3;
  string content = 4;
  int64 author_id = 2; 
  int64 created_at = 5; // Unix timestamp
  int64 updated_at = 6; // Unix timestamp
}

message PostResponse {
  Post post = 1;
}

message GetPostRequest {
  int64 post_id = 1;
}

message UpdatePostRequest {
  int64 post_id = 1;
  string title = 2;
  string content = 3;
}

message DeletePostRequest {
  int64 post_id = 1;
}

message ListPostsRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message ListPostsResponse {
  repeated Post posts = 1;
  int64 limit = 2;
  int64 offset = 3;
  int64 total_posts_count = 4;
}

service BlogService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);

  rpc CreatePost (CreatePostRequest) returns (PostResponse);
  rpc GetPost (GetPostRequest) returns (PostResponse);
  rpc UpdatePost (UpdatePostRequest) returns (PostResponse);
  rpc DeletePost (DeletePostRequest) returns (google.protobuf.Empty);
  rpc ListPosts (ListPostsRequest) returns (ListPostsResponse);
}
